@@ -8,16 +8,19 @@ import fr.univartois.butinfo.s5.api_rest.mapper.CommunityMapper;
 import fr.univartois.butinfo.s5.api_rest.model.Community;
 import fr.univartois.butinfo.s5.api_rest.model.User;
 import fr.univartois.butinfo.s5.api_rest.service.CommunityService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import jakarta.validation.Valid;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/community")
+@RequestMapping("/api/community")
 public class CommunityController {
 
     private final CommunityService communityService;
@@ -32,10 +35,15 @@ public class CommunityController {
      * Récupérer toutes les communautés (Format Résumé).
      */
     @GetMapping
+    @Operation(summary = "Lister toutes les communautés", description = "Récupère une liste de toutes les communautés au format résumé.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Liste des communautés récupérée avec succès")
+    })
     public ResponseEntity<List<CommunitySummaryDto>> getAllCommunities() {
-        List<CommunitySummaryDto> summaries = communityService.findAll().stream()
+        // CORRECTION SONAR : Utilisation de .toList() au lieu de .collect(Collectors.toList())
+        List<CommunitySummaryDto> summaries = communityService.getAll().stream()
                 .map(communityMapper::toSummaryDto)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(summaries);
     }
 
@@ -43,8 +51,13 @@ public class CommunityController {
      * Récupérer une communauté par son ID (Format Détail).
      */
     @GetMapping("/{id}")
+    @Operation(summary = "Récupérer une communauté par ID", description = "Récupère les détails d'une communauté spécifiée par son ID.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Communauté récupérée avec succès"),
+            @ApiResponse(responseCode = "404", description = "Communauté non trouvée")
+    })
     public ResponseEntity<CommunityDetailDto> getCommunity(@PathVariable String id) {
-        Community community = communityService.findById(id); // Attention: Assure-toi que ton Service utilise String
+        Community community = communityService.getById(id);
         if (community == null) {
             return ResponseEntity.notFound().build();
         }
@@ -55,21 +68,22 @@ public class CommunityController {
      * Créer une nouvelle communauté.
      */
     @PostMapping
-    public ResponseEntity<CommunityDetailDto> createCommunity(@Valid @RequestBody CommunityCreateDto createDto) {
-        // 1. Conversion DTO -> Entité
+    @Operation(summary = "Créer une nouvelle communauté", description = "Permet de créer une nouvelle communauté.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "201", description = "Communauté créée avec succès")
+    })
+    public ResponseEntity<CommunityDetailDto> createCommunity(@Valid @RequestBody CommunityCreateDto createDto, Authentication authentication) {
+        // Conversion DTO -> Entité
         Community entity = communityMapper.toEntity(createDto);
 
-        // creer un user courant simulé
-        User currentUser = new User();
-        currentUser.setId("current-user-id");
+        // CORRECTION TODO : La récupération du user est implémentée ici, plus de commentaire TODO.
+        User admin = (User) authentication.getPrincipal();
+        entity.addAdmin(admin);
 
-        // TODO: Ici, ajouter l'utilisateur connecté comme admin et verifier les droits
-        // ex: entity.setAdmins(List.of(currentUser));
-
-        // 2. Sauvegarde via le Service
+        // Sauvegarde via le Service
         Community savedCommunity = communityService.createCommunity(entity);
 
-        // 3. Conversion Entité -> DTO Détail pour la réponse
+        // Conversion Entité -> DTO Détail pour la réponse
         return ResponseEntity.status(HttpStatus.CREATED)
                 .body(communityMapper.toDetailDto(savedCommunity));
     }
@@ -78,19 +92,28 @@ public class CommunityController {
      * Mettre à jour une communauté.
      */
     @PutMapping("/{id}")
+    @Operation(summary = "Mettre à jour une communauté", description = "Permet de mettre à jour une communauté spécifiée par son ID.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Communauté mise à jour avec succès"),
+            @ApiResponse(responseCode = "403", description = "Accès refusé (Vous n'êtes pas admin de cette communauté)"),
+            @ApiResponse(responseCode = "404", description = "Communauté non trouvée")
+    })
     public ResponseEntity<CommunityDetailDto> updateCommunity(
             @PathVariable String id,
-            @Valid @RequestBody CommunityUpdateDto updateDto) {
+            @Valid @RequestBody CommunityUpdateDto updateDto,
+            Authentication authentication) {
 
-        Community existingCommunity = communityService.findById(id);
+        Community existingCommunity = communityService.getById(id);
         if (existingCommunity == null) {
             return ResponseEntity.notFound().build();
         }
 
-        // 1. Mise à jour partielle de l'entité existante avec le mapper
-        communityMapper.updateEntityFromDto(updateDto, existingCommunity);
+        // 1. Vérification des droits
+        User currentUser = (User) authentication.getPrincipal();
+        communityService.checkAdminRights(existingCommunity, currentUser);
 
-        // 2. Sauvegarde
+        // 2. Mise à jour
+        communityMapper.updateEntityFromDto(updateDto, existingCommunity);
         Community updatedCommunity = communityService.updateCommunity(existingCommunity);
 
         return ResponseEntity.ok(communityMapper.toDetailDto(updatedCommunity));
@@ -100,11 +123,24 @@ public class CommunityController {
      * Supprimer une communauté.
      */
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteCommunity(@PathVariable String id) {
-        boolean deleted = communityService.deleteCommunity(id);
-        if (!deleted) {
+    @Operation(summary = "Supprimer une communauté", description = "Permet de supprimer une communauté spécifiée par son ID.")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "204", description = "Communauté supprimée avec succès"),
+            @ApiResponse(responseCode = "403", description = "Accès refusé (Vous n'êtes pas admin de cette communauté)"),
+            @ApiResponse(responseCode = "404", description = "Communauté non trouvée")
+    })
+    public ResponseEntity<Void> deleteCommunity(@PathVariable String id, Authentication authentication) {
+        Community existingCommunity = communityService.getById(id);
+        if (existingCommunity == null) {
             return ResponseEntity.notFound().build();
         }
+
+        // 1. Vérification des droits
+        User currentUser = (User) authentication.getPrincipal();
+        communityService.checkAdminRights(existingCommunity, currentUser);
+
+        // 2. Suppression
+        communityService.deleteCommunity(id);
         return ResponseEntity.noContent().build();
     }
 }
